README.txt
Install Python 3.
Install pygame.
Install pyglet with pip3.
Install Sphynx with pip3 to generate documentation.
> Installing collected packages: Sphinx, alabaster, babel, docutils, sphinxcontrib-websupport, snowballstemmer, Jinja2, Pygments, typing, imagesize, pytz, MarkupSafe
*** Error compiling '/tmp/pip_build_root/Jinja2/jinja2/asyncfilters.py'...
  File "/tmp/pip_build_root/Jinja2/jinja2/asyncfilters.py", line 7
    async def auto_to_seq(value):
            ^
SyntaxError: invalid syntax

You have to install PyGame.
Then install Pyglet.
